--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.4",
     "@tailwindcss/vite": "^4.1.3",
+    "@tanstack/react-table": "^8.21.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.487.0",
-    "react": "^19.1.0",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.0",
     "recharts": "^2.15.2",
     "styled-components": "^6.1.17",
